--- a/tugas 22.html
+++ b/tugas 22.html
@@ -59,11 +59,11 @@
           </tr>
           <tr>
             <td>Foto/td>
-            <td>: <img src="/tugas 22/logo1.jpg" width="20%" height="20%"></td>
+            <td>: <img src="/logo1.jpg" width="20%" height="20%"></td>
           </tr>
           <tr>
             <td>Audio</td>
-            <td>: <audio src="/tugas 22/sample.mp3" controls></td>
+            <td>: <audio src="/sample.mp3" controls></td>
           </tr>
         </table>
         </form>
